# MerMarkEditor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_PL.md  README_ZH.md  RELEASE_NOTES.md  generate-icon.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tauri-signing-key.key.pub  test-footnotes.md  test-footnotes.md.mermark-ai.tmp  test-toc-large.md  vite.config.ts  vitest.config.ts  vitest.setup.ts
.claude/: launch.json
.claude/commands/: release-prep.md
.github/workflows/: appimage-smoke.yml  (+1 more)
.playwright-mcp/: page-2026-04-17T23-34-38-461Z.yml  page-2026-04-17T23-34-49-467Z.yml  page-2026-04-17T23-35-12-500Z.yml  page-2026-04-17T23-37-22-849Z.yml  page-2026-04-17T23-37-51-999Z.yml  page-2026-04-17T23-52-57-376Z.yml  page-2026-04-17T23-53-04-594Z.yml  page-2026-04-17T23-53-19-610Z.yml
assets/: .gitkeep
demo/: fable5-presentation.md  marp-features-test.md  mermark-presentation.md
manual-tests/: issue-113.md  issue-114.md  issue-115.md
scripts/: bump-version.mjs  create-ico.mjs  gen-changelog.mjs  generate-icons.mjs
src/: App.vue  constants.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: access_map.rs  audit.rs  cli.rs  mod.rs  paths.rs  sessions.rs  snapshots.rs  types.rs
src-tauri/src/ai/health/: claude.rs  codex.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/ai/process/: claude.rs  codex.rs  file_tools.rs  local_ctx.rs  mod.rs  normalizer.rs  ollama.rs  openai.rs  registry.rs
(+265 files in other folders)
